# ld30_multiverse

./: CMakeLists.txt  LICENSE  README.md  compile_emscripten.sh  libestk3.bc
art/: logo.xcf  shot.aup  sprites.xcf
art/shot_data/e00/d00/: e00001df.au  e00002d9.au  e00002f1.au  e0000403.au  e0000406.au  e00004d0.au  e00004dc.au  e00005d5.au  e00005ec.au  e00008a7.au  e00008cd.au  e0000908.au  e00009b2.au  e0000bc8.au  e0000d6e.au  e0000d82.au  e0000da3.au  e0000f65.au
html/: game.html  index.html
media/: sprites.vert
src/: blood.c  blood.h  common.c  common.h  dude.c  dude.h  main.c  map.c  map.h  robo.c  robo.h  sound.c  sound.h  state.c  state.h
